# croot

./: .gitignore  Cargo.toml  README.md
examples/: principal_roots.rs  roots.rs
src/: approx.rs  lib.rs  main.rs  period.rs  roots.rs
src/roots/: mod.rs  principal.rs  root.rs  roots.rs  unity.rs  utils.rs
src/traits/: mod.rs  precision.rs  to_strings.rs
